create timeline and sidebar

--- a/layout/src/index.html
+++ b/layout/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../dist/style.css" rel="stylesheet">
+  <!-- <link href="../dist/style.css" rel="stylesheet"> -->
 </head>
-<body>
-  <header class="flex flex-col">
-    <div class="h-5 w-full bg-neutral-400 mb-12"></div>
+<body class="bg-neutral-100">
+  <header class="flex flex-col pt-6">
+    <!-- <div class="h-5 w-full bg-neutral-400 mb-8"></div> -->
     <div class="container mx-auto flex max-w-screen-md">
       <div class="w-44">
         <div class="relative w-44">
@@ -15,36 +15,248 @@
           <div class="absolute h-44 w-44 border-4 rounded-full border-opacity-25 border-neutral-900 top-0 left-0"></div>
         </div>
       </div>
-      <div class="ml-8">
-        <h1 class="text-5xl text-neutral-600 uppercase"><span class="font-semibold">Luciano</span> Braga</h1>
-        <h5 class="text-xl text-neutral-400 uppercase font-light py-4">Senior Software Developer</h5>
+      <div class="ml-8 py-2">
+        <h1 class="text-4xl text-neutral-600 uppercase"><span class="font-semibold">Luciano</span> Braga</h1>
+        <h5 class="text-xl text-neutral-600 uppercase font-light py-4">Senior Software Developer</h5>
         <p class="text-neutral-500 text-sm text-justify">Desenvolvedor desde 2007, sempre com grande interesse na resolução de problemas cotidianos através da tecnologia, principalmente a programação de computadores, utilizando linguagens para Web, Mobile ou Desktop.</p>
       </div>
     </div>
   </header>
-  <section class="flex mx-auto max-w-screen-md mt-10">    
-    <aside class="flex-none w-14 w-48 p-4 pt-0">
-      <div class="border-r-2 border-neutral-300 h-full mt-4 flex flex-col gap-6">
+  <section class="flex mx-auto max-w-screen-md">    
+    <aside class="flex-none w-14 w-56 p-4 pt-0">
+      <div class="border-r border-neutral-300 h-full mt-4 flex flex-col gap-4">
         <div id="education">
-          <h2 class="text-2xl text-neutral-700 uppercase font-semibold pb-2">Education</h2>
+          <h2 class="text-xl text-neutral-700 uppercase font-semibold pb-1 flex align-middle items-center">
+            <svg xmlns="http://www.w3.org/2000/svg"  class="h-6 w-6 mr-2 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
+            </svg>
+            Contacts
+          </h2>
+          <ul class="text-xs flex flex-col gap-y-3">
+            <li class="flex align-middle gap-x-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+              </svg>
+              lucianobragaweb@gmail.com
+            </li>
+            <li class="flex align-middle gap-x-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+              </svg>
+              github.com/lucianobragaweb
+            </li>
+            <li class="flex align-middle gap-x-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              lucianobragaweb.github.io
+            </li>
+            <li class="flex align-middle gap-x-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+              </svg>
+              +55 88 9 8845 9521
+            </li> 
+            <li class="flex align-middle gap-x-1">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+              </svg>
+              lucianobragaweb
+            </li>                     
+          </ul>          
+        </div>
+        <div id="education">
+          <h2 class="text-xl text-neutral-700 uppercase font-semibold pb-1 flex align-middle items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path d="M12 14l9-5-9-5-9 5 9 5z" />
+              <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
+            </svg>
+            Education
+          </h2>
           <p class="font-bold text-neutral-700">Computer Science</p>
           <p class="font-light text-neutral-500 text-sm">Universidade Estadual do Vale do Acaraú, Sobral</p>
           <p class="text-neutral-500 text-sm">2018 - 2018</p>
         </div>
-        <div id="expertise">
-          <h2 class="text-2xl text-neutral-700 uppercase font-semibold pb-2">Expertise</h2>
-          <p class="font-bold text-neutral-700">Computer Science</p>
+        <div id="education">
+          <h2 class="text-md text-neutral-700 uppercase font-semibold pb-2">Awards</h2>
+          <p class="text-neutral-700 text-sm">Intel Excelence in Computer Science Award - FEBRACE</p>
           <p class="font-light text-neutral-500 text-sm">Universidade Estadual do Vale do Acaraú, Sobral</p>
-          <p class="text-neutral-500 text-sm">2018 - 2018</p>
+          <p class="text-neutral-500 text-sm">2012</p>
+        </div>
+        <div id="expertise">
+          <h2 class="text-xl text-neutral-700 uppercase font-semibold pb-2 flex align-middle items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+            </svg>
+            Expertise
+          </h2>
+
+          <div class="pr-2 mb-2">
+            <div class="text-xs mb-1 text-neutral-600">Javascript</div>
+            <div class="w-full bg-gray-200 h-1">
+              <div class="bg-neutral-600 h-1" style="width: 80%"></div>
+            </div>
+          </div>
+
+          <div class="pr-2 mb-2">
+            <div class="text-xs mb-1 text-neutral-600">PHP/Laravel</div>
+            <div class="w-full bg-gray-200 h-1">
+              <div class="bg-neutral-600 h-1" style="width: 70%"></div>
+            </div>
+          </div>
+
+          <div class="pr-2 mb-2">
+            <div class="text-xs mb-1 text-neutral-600">Node.js</div>
+            <div class="w-full bg-gray-200 h-1">
+              <div class="bg-neutral-600 h-1" style="width: 55%"></div>
+            </div>
+          </div>
+
+          <div class="pr-2 mb-2">
+            <div class="text-xs mb-1 text-neutral-600">Vue.js</div>
+            <div class="w-full bg-gray-200 h-1">
+              <div class="bg-neutral-600 h-1" style="width: 70%"></div>
+            </div>
+          </div>
+
+          <div class="pr-2 mb-2">
+            <div class="text-xs mb-1 text-neutral-600">React/Angular</div>
+            <div class="w-full bg-gray-200 h-1">
+              <div class="bg-neutral-600 h-1" style="width: 60%"></div>
+            </div>
+          </div>
         </div>
       </div>
     </aside>
-    <main class="grow h-20 p-4 bg-neutral-200">
-      <h2 class="text-2xl text-neutral-700 uppercase font-semibold pb-2">Professional Experiences</h2>
+    <main class="grow py-4">
+      <h2 class="text-xl text-neutral-700 uppercase font-semibold pb-2 mb-4">Professional Experiences</h2>
       <section>
-        <article>dew</article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-400 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Senior Frontend</h3>
+            <!-- <h4 class="text-neutral-600 mb-1 mt-0">Senior Frontend</h4> -->
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">ago/2021 - Now</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Banco Modal</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              São Paulo, Brasil
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-400 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Full Stack Developer</h3>
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">jan/2021 - set/2021</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">DevSquad</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              Utah, EUA
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-400 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Senior Software Engeneer</h3>
+            <!-- <h4 class="text-neutral-600 mb-1 mt-0">Senior Frontend</h4> -->
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">2017 - 2021</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">iTransparência Sistemas</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              Ceará, Brasil
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-400 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Frontend Developer</h3>
+            <!-- <h4 class="text-neutral-600 mb-1 mt-0">Senior Frontend</h4> -->
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">mar/2016 - ago/2016</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Amagafa Tech</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              São Paulo, Brasil
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-400 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Web Developer</h3>
+            <!-- <h4 class="text-neutral-600 mb-1 mt-0">Senior Frontend</h4> -->
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">2013 - 2014</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">iBlue</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              Ceará, Brasil
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
+        <article class="flex">
+          <div class="w-48 flex-none relative border-r border-neutral-300 pb-4 pr-4">
+            <div class="bg-neutral-700 w-2 h-2 rounded-full absolute -right-1 border-2 border-neutral-400"></div>
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Web Developer</h3>
+            <!-- <h4 class="text-neutral-600 mb-1 mt-0">Senior Frontend</h4> -->
+            <span class="bg-neutral-200 text-xs text-neutral-400 py-1 px-2 rounded-sm uppercase">2010 - 2013</span>
+          </div>
+          <div class="grow p-4 pl-6 pt-0 relative">
+            <h3 class="text-neutral-600 font-bold mb-0 text-sm">Freelancer</h3>
+            <span class="absolute top-0 right-4 text-xs flex bg-neutral-200 px-1 py-0.5 text-neutral-400 rounded-sm">
+              <svg class="h-4 w-4 mr-1" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z" />
+              </svg>
+              Ceará, Brasil
+            </span>
+            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+          </div>
+        </article>
       </section>
     </main>
-  </section>  
+  </section>
+
+  <footer class="py-2 px-4 mt-4 flex mx-auto max-w-screen-md border-t border-neutral-300">
+    <div class="flex-none w-48 text-xl uppercase">
+      Hobbies
+    </div>
+    <div class="grow">
+      <ul class="flex gap-x-8 uppercase font-semibold text-neutral-500">
+        <li>Design</li>
+        <li>Music</li>
+        <li>Books</li>
+        <li>Test</li>
+      </ul>
+    </div>
+  </footer>
+
+  <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
