edit  experiences description

--- a/layout/src/index.html
+++ b/layout/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link href="../dist/style.css" rel="stylesheet"> -->
+  <link href="../dist/style.css" rel="stylesheet">
 </head>
 <body class="bg-neutral-100">
   <header class="flex flex-col pt-6">
@@ -164,7 +164,8 @@
               </svg>
               Utah, EUA
             </span>
-            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+            <p class="text-xs text-justify">Acting as a full-stack developer of modern and scalable web applications for the biggest companies in the USA, using SCRUM for project management.
+              <br><br> Docker, PHP 8, Laravel 8, Vue.js, Livewire, and TailwindCSS are the main technologies used in these projects.</p>
           </div>
         </article>
         <article class="flex">
@@ -200,7 +201,7 @@
               </svg>
               São Paulo, Brasil
             </span>
-            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+            <p class="text-xs text-justify">Trabalhando em um time de 10 pessoas nós construímos uma aplicação de e-learning para treinamento de primeira habilitação e reciclagem de CNH.</p>
           </div>
         </article>
         <article class="flex">
@@ -218,7 +219,7 @@
               </svg>
               Ceará, Brasil
             </span>
-            <p class="text-xs text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie quam velit, non venenatis magna imperdiet vitae. Praesent laoreet tristique quam tempor lobortis.</p>
+            <p class="text-xs text-justify">Trabalhando na iBlue tive a oportunidade de aprender diversas tecnologias para Web e Mobile, por se tratar de uma Startup jovem e em desenvolvimento.</p>
           </div>
         </article>
         <article class="flex">
@@ -257,6 +258,6 @@
     </div>
   </footer>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </body>
 </html>
