--- a/layout/src/index.html
+++ b/layout/src/index.html
@@ -11,7 +11,7 @@
     <div class="container mx-auto flex max-w-screen-md">
       <div class="w-44">
         <div class="relative w-44">
-          <img src="./img/profile.png" alt="Luciano Braga" class="grayscale rounded-full">
+          <img src="./img/profile.jpg" alt="Luciano Braga" class="grayscale rounded-full">
           <div class="absolute h-44 w-44 border-4 rounded-full border-opacity-25 border-neutral-900 top-0 left-0"></div>
         </div>
       </div>
@@ -22,7 +22,7 @@
       </div>
     </div>
   </header>
-  <section class="flex mx-auto max-w-screen-md">    
+  <section class="flex mx-auto max-w-screen-md">
     <aside class="flex-none w-14 w-56 p-4 pt-0">
       <div class="border-r border-neutral-300 h-full mt-4 flex flex-col gap-4">
         <div id="education">
@@ -56,14 +56,14 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
               </svg>
               +55 88 9 8845 9521
-            </li> 
+            </li>
             <li class="flex align-middle gap-x-1">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
               </svg>
               lucianobragaweb
-            </li>                     
-          </ul>          
+            </li>
+          </ul>
         </div>
         <div id="education">
           <h2 class="text-xl text-neutral-700 uppercase font-semibold pb-1 flex align-middle items-center">
